# fastlog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_and_install.bat  fastlog.pc.in  fastlogConfig.cmake.in  issues.md
fastlog/: CMakeLists.txt
fastlog/example/: example.cpp
fastlog/include/: fastlog.hpp  logbuffer.hpp  logfstream.hpp  logger.hpp  loglevel.hpp  manager.hpp  util.hpp
fastlog/src/: fastlog.cpp  logbuffer.cpp  logfstream.cpp  logger.cpp  loglevel.cpp  manager.cpp  util.cpp
fastlog/test/: CMakeLists.txt  test_long.cpp  test_simple.cpp
